<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="32dp"
    android:layout_margin="32dp">

    <TextView
        android:id="@+id/label_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/input_title_post"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/label_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_border_input"
        android:padding="8dp"
        android:hint="@string/title_post"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/label_content"
        app:layout_constraintTop_toBottomOf="@id/input_title_post"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/content"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/input_content_post"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/label_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_border_input"
        android:padding="8dp"
        android:hint="@string/content_post"
        android:textSize="14sp"
        android:lines="4"
        android:gravity="top"/>

    <Button
        android:id="@+id/btn_post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_content_post"
        android:layout_marginTop="16dp"
        android:text="@string/create"
        tools:layout_editor_absoluteY="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>